Added Code for Overall Score Report